--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: white;
+    color: black;
 }
 
 .wrapper {
