--- a/css/main.css
+++ b/css/main.css
@@ -107,15 +107,19 @@ button {
 
 @media screen and (max-width: 700px) {
     .wrapper {
-        margin-top: 2rem;
+        margin-top: 1rem;
         width: 90vmin;
     }
 
     #game-board{
-        margin-top: 1rem;
+        margin-top: 0.5rem;
         height: 90vmin;
         width: 90vmin;
         font-size: 24vmin;
+    }
+
+    #game-message {
+        margin: 0;
     }
 
     button {
