--- a/css/main.css
+++ b/css/main.css
@@ -108,14 +108,15 @@ button {
 @media screen and (max-width: 700px) {
     .wrapper {
         margin-top: 1rem;
-        width: 90vmin;
+        width: 100%;
     }
 
     #game-board{
         margin-top: 0.5rem;
-        height: 90vmin;
-        width: 90vmin;
-        font-size: 24vmin;
+        height: 300px;
+        width: 300px;
+        font-size: 20vmin;
+        gap: 6px;
     }
 
     #game-message {
