--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@ body {
     align-items: center;
     background-color: white;
     color: black;
+    overflow: hidden;
 }
 
 .wrapper {
@@ -108,7 +109,7 @@ button {
 @media screen and (max-width: 700px) {
     .wrapper {
         margin-top: 1rem;
-        width: 100%;
+        width: 300px;
     }
 
     #game-board{
