--- a/css/main.css
+++ b/css/main.css
@@ -90,6 +90,7 @@ button {
     cursor: pointer;
     border-style: none;
     border: 4px solid black;
+    color: black;
     background-color: white;
     border-radius: 8px;
     font-size: 1.5rem;
