Marker sizes are now a fixed dimmension

--- a/css/main.css
+++ b/css/main.css
@@ -117,7 +117,7 @@ button {
         margin-top: 0.5rem;
         height: 300px;
         width: 300px;
-        font-size: 20vmin;
+        font-size: 72px;
         gap: 6px;
     }
 
