--- a/css/main.css
+++ b/css/main.css
@@ -62,9 +62,10 @@ body {
 }
 
 #scoreboard > section > p {
-    font-weight: 700;
+    font-weight: bold;
     font-size: 1.5rem;
 }
+
 /* Apply top and bottom borders to divs 4-6 */
 
 /* Full borders */
@@ -85,6 +86,7 @@ body {
 } */
 
 button {
+    font-family: 'Work Sans', sans-serif;
     outline: none;
     cursor: pointer;
     border-style: none;
@@ -95,6 +97,7 @@ button {
     font-size: 1.5rem;
     padding: 0.5em;
     width: 50%;
+    font-weight: bold;
 }
 
 @keyframes placeMarker{
