--- a/css/main.css
+++ b/css/main.css
@@ -100,6 +100,15 @@ button {
     font-weight: bold;
 }
 
+@-webkit-keyframes placeMarker{
+    0% {
+        transform: scale(0.75);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
 @keyframes placeMarker{
     0% {
         transform: scale(0.75);
